ex2/testdata/parser/error/this.java
/**
 * Created by alka on 5/11/2017.
 */
class TestCaseserror {
    public static void main(String [] args)
    {
        int v;
	int a;

        v=10;    


	this;

    }
}
